# netsiege

./: .gitignore  .kdev_include_paths  CMakeLists.txt  INSTALL.md  LICENSE  README.md  config.h.in  main.cpp  ndebug.h  netsiege.doxygen  netsiege.kdev4  server.cpp
angelscript/: CMakeLists.txt
campaigns/test/: main.as  rpc.tab
debug/: CMakeLists.txt  ndebug.cpp  ndebug.h
editor/: CMakeLists.txt  CampaignDataFormat.txt  brush.cpp  brush.h  brushdrawer.cpp  brushdrawer.h  campaignmanager.cpp  campaignmanager.h  editableterrainpagedworldsection.cpp  editableterrainpagedworldsection.h  editorcamera.cpp  editorcamera.h  editorviewwidget.cpp  editorviewwidget.h  iogreeventhandler.hpp  main.cpp  ogrebase.cpp  ogrebase.h  qogrewidget.cpp  qogrewidget.hpp  sloteditor.cpp  sloteditor.h  terrainlayer.cpp  terrainlayer.h  terrainlayerlistmodel.cpp  terrainlayerlistmodel.h  terrainmaterial.cpp  terrainmaterial.h  undocommands.cpp  undocommands.h  walker.cpp  walker.h  walkercamera.cpp  walkercamera.h
editor/ui/: layereditor.ui  main.ui  new.ui  sloteditor.ui  terrainsettings.ui
network/: CMakeLists.txt  clientsession.cpp  clientsession.h  gameclient.cpp  gameclient.h  gameserver.cpp  gameserver.h  network.cpp  network.h  network.pb.cc  network.pb.h  network.proto  networkclient.cpp  networkclient.h  networkserver.cpp  networkserver.h  udpconnection.h
network/tests/: CMakeLists.txt  netsynctest.cpp  netsynctest.h
oms/: CMakeLists.txt  gameobject.cpp  gameobject.h  icomponent.h  objectmanager.cpp  objectmanager.h  objects.pb.cc  objects.pb.h  objects.proto
oms/tests/: .omstest.cpp.kate-swp  CMakeLists.txt  omstest.cpp  omstest.h
src/: CMakeLists.txt  config.h.in  main.cpp  server.cpp
src/campaign/: CMakeLists.txt  clientlogic.cpp  clientlogic.h  manager.cpp  manager.h  scriptengine.cpp  scriptengine.h  scriptfile.cpp  scriptfile.h  scriptfilemanager.cpp  scriptfilemanager.h  serverlogic.cpp  serverlogic.h
src/debug/: CMakeLists.txt  ndebug.cpp  ndebug.h
src/network/: CMakeLists.txt  clientsession.cpp  clientsession.h  network.h  network.proto  networkclient.cpp  networkclient.h  networkserver.cpp  networkserver.h  rpcdispatcher.cpp  rpcdispatcher.h  rpcpackage.cpp  rpcpackage.h  udpconnection.h
src/network/tests/: CMakeLists.txt  netsynctest.h
src/ogre/: OGREManager.cpp  OGREManager.h
src/oms/: CMakeLists.txt  gameobject.cpp  gameobject.h  objectmanager.cpp  objectmanager.h  objects.proto
src/oms/tests/: CMakeLists.txt  omstest.cpp  omstest.h
src/script/: CMakeLists.txt  script.proto  scriptengine.cpp  scriptengine.h  scriptfile.cpp  scriptfile.h  scriptfilemanager.cpp  scriptfilemanager.h  serializer.cpp  serializer.h
testmedia/world/: TerrainSimpleAmbientFP.glsl  TerrainSimpleFP.glsl  TerrainSimpleVP.glsl  terrain.material
